feat: add posts and update styles

--- a/src/pages/about.astro
+++ b/src/pages/about.astro
@@ -21,8 +21,14 @@ import Main from "@/layouts/main.component.astro";
       think frontend development is a field where lot of things could be improved
       (code architecture, styling patterns, rendering modes).
     </p>
+    <p>
+      Design entirely copied from <a
+        href="https://jrmyphlmn.com/"
+        target="_blank"
+        class="external-link">Jeremy</a
+      >
+    </p>
   </section>
-  <br />
   <section>
     <p>
       → <a href="/uses">/uses</a>
