--- a/src/pages/uses.astro
+++ b/src/pages/uses.astro
@@ -6,21 +6,34 @@ import Main from "@/layouts/main.component.astro";
   <h2>hardware</h2>
   <ul>
     <li>Mac Book Pro 14' 2023 m2 16 Go</li>
-    <li>Pixel 5</li>
+    <li>iPhone 15 pro</li>
     <li>
-      I use any external screen available when in the office but I don't use one
-      when at home
+      Any external screen when available at the office but none when at home
     </li>
   </ul>
 
   <h2>software</h2>
   <ul>
     <li>VSCode</li>
-    <li>TickTick</li>
-    <li>Obsidian</li>
-    <li>Raycast</li>
+    <li>
+      <a href="https://culturecode.com" target="_blank" class="external-link"
+        >Things</a
+      >
+    </li>
+    <li>Apple Notes</li>
+    <li>
+      <a href="https://www.raycast.com/" target="_blank" class="external-link"
+        >Raycast</a
+      >
+    </li>
     <li>1Password</li>
-    <li>Brave</li>
+    <li>
+      Safari / <a
+        href="https://thebrowser.company/"
+        target="_blank"
+        class="external-link">Arc</a
+      >
+    </li>
     <li>MacOS Mail</li>
   </ul>
 </Main>
