--- a/src/components/footer.component.astro
+++ b/src/components/footer.component.astro
@@ -1,6 +1,7 @@
 <footer>
-  <a href="https://github.com/pedenys">github</a>
-  <a href="mailto:mailto:pedenys@pm.me">mail</a>
+  <a href="https://github.com/pedenys" target="_blank">github</a>
+  <a href="mailto:mailto:pedenys@pm.me" target="_blank">mail</a>
+  <a href="https://pedenys.fr" target="_blank">journal <span>‡</span></a>
 </footer>
 <style>
   footer {
@@ -8,9 +9,12 @@
     display: flex;
     flex-direction: row;
     justify-content: center;
-    align-items: center;
+    align-items: flex-end;
   }
-  a:first-of-type {
+  a:not(last--of-type) {
     margin-right: 1rem;
+  }
+  a span {
+    font-size: 1.2rem;
   }
 </style>
