--- a/src/layouts/main.component.astro
+++ b/src/layouts/main.component.astro
@@ -1,4 +1,5 @@
 ---
+import "@/styles/global.css";
 import Header from "@/components/header.component.astro";
 import Footer from "@/components/footer.component.astro";
 ---
@@ -35,59 +36,11 @@ import Footer from "@/components/footer.component.astro";
       <slot />
     </div>
     <Footer />
-    <style is:global>
-      :root {
-        --text: #333;
-        --background: #fefefe;
-      }
-
-      @media (prefers-color-scheme: dark) {
-        :root {
-          --text: #fefefe;
-          --background: #333;
-        }
-      }
-
-      html {
-        font-size: 62.5%;
-      }
-
-      body {
-        background-color: var(--background);
-        color: var(--text);
-        display: flex;
-        flex-direction: column;
-        font-family: apercu, monospace;
-        font-size: 1.6rem;
-        justify-content: space-between;
-        line-height: 1.5;
-        margin: 0;
-        min-height: 99vh;
-        padding: 0;
-        max-width: 100vw;
-
-        #website-content {
-          flew-grow: 1;
-          width: 80%;
-          margin-inline: auto;
-        }
-      }
-
-      a {
-        color: var(--text);
-        text-decoration: none;
-      }
-
-      a:hover {
-        color: var(--text);
-        text-decoration-line: underline;
-        text-decoration-thickness: 1px;
-        text-decoration-style: wavy;
-        text-decoration-color: var(--text);
-      }
-
-      a:visited {
-        color: var(--text);
+    <style>
+      #website-content {
+        flew-grow: 1;
+        width: 80%;
+        margin-inline: auto;
       }
 
       @media (min-width: 768px) {
