--- a/src/components/footer.component.astro
+++ b/src/components/footer.component.astro
@@ -9,7 +9,7 @@
     display: flex;
     flex-direction: row;
     justify-content: center;
-    align-items: flex-end;
+    align-items: center;
   }
   a:not(last--of-type) {
     margin-right: 1rem;
