--- a/src/components/postsList.component.astro
+++ b/src/components/postsList.component.astro
@@ -1,23 +1,35 @@
 ---
-const { posts } = Astro.props;
+import type { Post } from "@/types/post";
 import { markdown } from "@astropub/md";
+
+type Props = {
+  posts: Array<Post>;
+};
+
+const { posts } = Astro.props;
 ---
 
 <ul>
   {
-    posts.map((p) => (
-      <li>
-        <a>
-          <a href={`/posts/${p.slug}`}>{markdown.inline(p.data.title)}</a>
-        </a>
-        <time>
-          {new Date(p.timestamp).toLocaleDateString(undefined, {
-            month: "2-digit",
-            year: "numeric",
-          })}
-        </time>
-      </li>
-    ))
+    posts.map(
+      (p: {
+        slug: any;
+        data: { title: string };
+        timestamp: string | number | Date;
+      }) => (
+        <li>
+          <a>
+            <a href={`/posts/${p.slug}`}>{markdown.inline(p.data.title)}</a>
+          </a>
+          <time>
+            {new Date(p.timestamp).toLocaleDateString(undefined, {
+              month: "2-digit",
+              year: "numeric",
+            })}
+          </time>
+        </li>
+      )
+    )
   }
 </ul>
 <style>
