--- a/src/styles/global.css
+++ b/src/styles/global.css
@@ -25,7 +25,7 @@ body {
   justify-content: space-between;
   line-height: 1.5;
   margin: 0;
-  min-height: 99vh;
+  min-height: 100dvh;
   padding: 0;
   max-width: 100vw;
 }
