fix: mailto link in footer

--- a/src/components/footer.component.astro
+++ b/src/components/footer.component.astro
@@ -1,6 +1,6 @@
 <footer>
   <a href="https://github.com/pedenys" target="_blank">github</a>
-  <a href="mailto:mailto:pedenys@pm.me" target="_blank">mail</a>
+  <a href="mailto:pedenys@pm.me" target="_blank">mail</a>
 </footer>
 <style>
   footer {
