feat: update about page

--- a/src/pages/about.astro
+++ b/src/pages/about.astro
@@ -6,6 +6,7 @@ import Main from "@/layouts/main.component.astro";
   <h1>About</h1>
   <section>
     <p>I'm a French web developer, born and raised in the North of France.</p>
+    <p>Of course, I love French fries: <i>«&nbsp;La frite c'est la fête&nbsp»</i> 🍟.</p>
     <p>
       My favorite programming concept is <em
         ><strong>seperation of concerns</strong></em
@@ -16,7 +17,7 @@ import Main from "@/layouts/main.component.astro";
       isn't it ?).
     </p>
     <p>
-      I used to do bad mobile and backend (Node.js) code when I started working
+      I used to do (bad) mobile and backend (Node.js) code when I started working
       professionally then I switched to <strong>React.js</strong> (w/ Next.js). I
       think frontend development is a field where lot of things could be improved
       (code architecture, styling patterns, rendering modes).
