--- a/src/pages/uses.astro
+++ b/src/pages/uses.astro
@@ -5,7 +5,7 @@ import Main from "@/layouts/main.component.astro";
 <Main>
   <h2>hardware</h2>
   <ul>
-    <li>Mac Book Pro 14' 2023 m2 16 Go</li>
+    <li>Mac Book Pro 14' 2023 M2 16 Go</li>
     <li>iPhone 15 pro</li>
     <li>
       Any external screen when available at the office but none when at home
