feat: update uses

--- a/src/pages/uses.astro
+++ b/src/pages/uses.astro
@@ -6,7 +6,10 @@ import Main from "@/layouts/main.component.astro";
   <h2>hardware</h2>
   <ul>
     <li>Mac Book Pro 14' 2023 M2 16 Go</li>
-    <li>iPhone 15 pro</li>
+    <li>
+      Pixel 5 (if you know any device as small, lightweight and good as this
+      one, please <a href="mailto:pedenys@pm.me" target="_blank">reach out</a>!)
+    </li>
     <li>
       Any external screen when available at the office but none when at home
     </li>
@@ -15,25 +18,19 @@ import Main from "@/layouts/main.component.astro";
   <h2>software</h2>
   <ul>
     <li>VSCode</li>
-    <li>
-      <a href="https://culturecode.com" target="_blank" class="external-link"
-        >Things</a
-      >
-    </li>
-    <li>Apple Notes</li>
+    <li>No todo app</li>
+    <li>No notes app</li>
     <li>
       <a href="https://www.raycast.com/" target="_blank" class="external-link"
         >Raycast</a
       >
     </li>
-    <li>1Password</li>
     <li>
-      Safari / <a
-        href="https://thebrowser.company/"
-        target="_blank"
-        class="external-link">Arc</a
+      <a href="https://bitwarden.com/" target="_blank" class="external-link"
+        >Bitwarden</a
       >
     </li>
-    <li>MacOS Mail</li>
+    <li>Firefox</li>
+    <li>MacOS Mail / Thunderbird</li>
   </ul>
 </Main>
